<resources>
    <string name="app_name">条码系统</string>
    <string name="richfit_barcodesystem_brand">中国石油仓储条码</string>
    <string name="richfit_barcodesystem_brand2">及电子标签应用系统</string>
    <string name="richfit_barcodesystem_pwd_remember">记住密码</string>
    <string name="richfit_barcodesystem_login">登陆</string>
    <string name="richfit_barcodesystem_reset_password"><u>修改密码</u></string>
    <string name="richfit_barcodesystem_setting"><u>设置</u></string>
    <string name="richfit_barcodesystem_online_model">在线系统</string>
    <string name="richfit_barcodesystem_offline_model">离线系统</string>
    <string name="richfit_barcodesystem_open_drawer">打开</string>
    <string name="richfit_barcodesystem_close_drawer">关闭</string>
    <string name="richfit_barcodesystem_empty_error">返回数据为空</string>
    <string name="richfit_barcodesystem_local_load_ref_data">数据下载</string>
    <string name="richfit_barcodesystem_local_upload">数据上传</string>
    <string name="richfit_barcodesystem_new_user">新用户</string>
    <string name="ref_name">业务单据</string>
    <string name="supplier">供应商</string>
    <string name="transfer_date">过账日期</string>
    <string name="row_num">序号</string>
    <string name="ref_num">单据行</string>
    <string name="material_num">物资编码</string>
    <string name="material_desc">物资描述</string>
    <string name="act_quantity">应收数量</string>
    <string name="quantity">实收数量</string>
    <string name="material_group">物料组</string>
    <string name="inv">库存地点</string>
    <string name="x_location">下架仓位</string>
    <string name="s_location">上架仓位</string>
    <string name="is_location">是否上架</string>
    <string name="material_unit">计量单位</string>
    <string name="store_location">库存地点</string>
    <string name="act_return_quantity">应退数量</string>
    <string name="location_quantity">仓位数量</string>
    <string name="return_quantity">实退数量</string>
    <string name="special_inv_flag">特殊库存标识</string>
    <string name="act_rec_quantity">应收数量</string>
    <string name="rec_quantity">实收数量</string>
    <string name="total_quantity">累计数量</string>
    <string name="single">单品</string>
    <string name="ref_line_num">单据行</string>
    <string name="load_ref_data">正在加载单据数据,请稍后...</string>
    <string name="load_material_info">正在加载物料信息,请稍后...</string>
    <string name="load_inventory_info">正在加载库存信息,请稍后...</string>
    <string name="select_item">请选择</string>
    <string name="save_data">正在保存数据,请稍后...</string>
    <string name="header">抬头</string>
    <string name="data_detail">数据明细</string>
    <string name="data_collection">数据采集</string>
    <string name="yes_no_location">是否上架</string>
    <string name="approval_date">验收日期</string>
    <string name="approval_quantity">验收数量</string>
    <string name="ref_type">单据类型</string>
    <string name="material_visa">物料凭证</string>
    <string name="work">工厂</string>
    <string name="default_choose_item">请选择</string>
    <string name="delete">删除</string>
    <string name="edit">修改</string>
    <string name="has_history">您有上次未上传的业务,是否删除?点击确定将删除上次所有未上传的业务.</string>
    <string name="n_location">不上架</string>
    <string name="save_modify_data">正在修改明细数据，请稍后...</string>
    <string name="product_type">产品类型</string>
    <string name="component">组件</string>
    <string name="move_type">移动类型</string>
    <string name="read_history">正在读取明明细数据，请稍后...</string>
    <string name="customer">客户</string>
    <string name="is_js_zy">寄售转自有</string>
    <string name="act_delivery_quantity">应发数量</string>
    <string name="delivery_quantity">实发数量</string>
    <string name="inventory">库存查询</string>
    <string name="update_history_data">正在更新历史数据，请稍后...</string>
    <string name="check_ref">盘点单</string>
    <string name="check_date">盘点日期</string>
    <string name="checker">盘点人</string>
    <string name="check_location">盘点仓位</string>
    <string name="batch_flag">批次</string>
    <string name="inv_quantity">库存数量</string>
    <string name="check_quantity">盘点数量</string>
    <string name="check_state">盘点状态</string>
    <string name="series_num">序号</string>
    <string name="plan_use_quantity">计划消耗数量</string>
    <string name="act_use_quantity">实际消耗数量</string>
    <string name="js2zy_quantity">转自有数量</string>
    <string name="project_num">项目编号</string>
    <string name="net_num">网络编号</string>
    <string name="cost_center">成本中心</string>
    <string name="inventory_query">库存查询</string>
    <string name="load_quantity">正在仓位数量,请稍后...</string>
    <string name="special_inventory_flags">特殊库存标识</string>
    <string name="special_flag_js">寄售标识</string>
    <string name="special_flag_project">项目</string>
    <string name="special_flag_reference">订单</string>
    <string name="check_visa">盘点凭证</string>
    <string name="accum_check_quantity">累计盘点数量</string>
    <string name="warehouse_num">仓库号</string>
    <string name="warehouse">料组</string>
    <string name="inv_type">库存类型</string>
    <string name="special_inv_type">特殊库存标识</string>
    <string name="special_inv_num">特殊库存编号</string>
    <string name="take_goods_date">收货日期</string>
    <string name="loading">正在加载数据,请稍后...</string>
    <string name="load_inventory">下载库存</string>
    <string name="send_location">源仓位</string>
    <string name="obtain_inventory">获取库存</string>
    <string name="send_inv_quantity">源仓位库存</string>
    <string name="rec_location">目标仓位</string>
    <string name="adjust_quantity">调整数量</string>
    <string name="return_reason">退货原因</string>
    <string name="rg_material_type">退货物资类型</string>
    <string name="rec_work">接收工厂</string>
    <string name="rec_inv">接收库位</string>
    <string name="send_work">发出工厂</string>
    <string name="send_inv">发出库位</string>
    <string name="send_batch_flag">发出批次</string>
    <string name="send_loc">发出仓位</string>
    <string name="move_quantity">移库数量</string>
    <string name="rec_batch_flag">接收批次</string>
    <string name="rec_loc">接收仓位</string>
    <string name="act_move_quantity">应移数量</string>
    <string name="sending_name">发出方</string>
    <string name="wo_quantity">冲销数量</string>
    <string name="ref_quantity">单据数量</string>
    <string name="ok">确认</string>
    <string name="sx_quantity">允许上下架数量</string>
    <string name="total_wo_quantity">累计冲销数量</string>
    <string name="approval_name">验收人</string>
    <string name="inspect_batch">检验批</string>
    <string name="inspect_batch_quantity">检验批数量</string>
    <string name="qualified_quantity">合格数量</string>
    <string name="calibration_standard">校验标准</string>
    <string name="strategy_code">使用决策代码</string>
    <string name="inspection_result">检验结果</string>
    <string name="inspection_remark">检验备注</string>
    <string name="has_approval">已验收</string>
    <string name="arrival_quantity">到货数量</string>
    <string name="gz_quantity">过账数量</string>
    <string name="enable_gz_quantity">允许过账数量</string>
    <string name="has_located">已上架</string>
    <string name="take_photo">拍照</string>
    <string name="load_images">正在加载图片,请稍后...</string>
    <string name="delete_image">删除</string>
    <string name="total_qualified_quantity">累计合格数量</string>
    <string name="total_inventory">总库存</string>
    <string name="location">仓位</string>
    <string name="material_class">物资大类</string>
    <string name="create_date">创建日期</string>
    <string name="creator">创建人</string>
    <string name="price">单价</string>
    <string name="ds_quantity">出库数量</string>
    <string name="accept_entity">接收单位</string>
    <string name="ds_reason">出库原因</string>
    <string name="cancel">取消</string>
    <string name="total_quanlified_quantity">累计合格数量</string>
    <string name="select_all_images">全选</string>
    <string name="as_type">入库类型</string>
    <string name="check_update">检查更新</string>
    <string name="reset_password">修改密码</string>
    <string name="material_condition">物资编码条件</string>
    <string name="location_condition">仓位条件</string>
    <string name="biz_type">业务类型</string>
    <string name="query_claim_num">查询或索赔单号</string>
    <string name="approval_method">验收方式</string>
    <string name="ref_quality">质检单号</string>
    <string name="receive_visa">收货凭证号</string>
    <string name="inspect_person">验收人</string>
    <string name="travel">车船号</string>
    <string name="sample_quantity">抽检数量</string>
    <string name="inspect_quantity">送检数量</string>
    <string name="certificate">合格证</string>
    <string name="manual">说明书</string>
    <string name="quality_certificate">质证书</string>
    <string name="package_condition">包装情况</string>
    <string name="sound_quantity">完好数量</string>
    <string name="damage_quantity">损坏数量</string>
    <string name="corrosion_quantity">腐蚀数量</string>
    <string name="bad_quantity">变质数量</string>
    <string name="other_quantity">其他数量</string>
    <string name="arrival_date">到货日期</string>
    <string name="contact_quantity">合同数量</string>
    <string name="balance_quantity">结算数量</string>
    <string name="contractQuantity">合同数量</string>
    <string name="approval_type">验收类别</string>
    <string name="target_location">目标仓位</string>
    <string name="order_quantity">单据数量</string>
    <string name="manufacture_name">制造商名称</string>
    <string name="sample_ratio">抽检比例</string>
    <string name="perfect_quantity">完好数</string>
    <string name="corrosion">锈蚀</string>
    <string name="damage">损坏</string>
    <string name="bad">变质</string>
    <string name="quality_problem">其他质量问题</string>
    <string name="qm_num">质检单号</string>
    <string name="inventoryQueryTypeSAPTotal">01</string>
    <string name="inventoryQueryTypeUnPrecise">02</string>
    <string name="inventoryQueryTypePrecise">"03</string>
    <string name="inventoryQueryTypeSAPLocation">04</string>
    <string name="invTypeNorm">""</string>
    <string name="invTypeQ">Q</string>
    <string name="invTypeS">S</string>
    <string name="invTypeR">R</string>
    <string name="return_delivery_quantity">退货交货数量</string>
    <string name="set_zero">标记0数量</string>
    <string name="new_flag">新增</string>
    <string name="project_text">项目文本</string>
    <string name="move_cause_desc">移动原因说明</string>
    <string name="insLot">检验批编号</string>
    <string name="insLot_quantity">检验批数量</string>
    <string name="refDoc">物料凭证</string>
    <string name="refDocItem">物料凭证行项目</string>
    <string name="move_cause">移动原因</string>
    <string name="real_used_quantity">实际消耗数量</string>
    <string name="total_used_quantity">累计消耗数量</string>
    <string name="ref_line_num_105">参考单据行</string>
    <string name="detail_on_location">本次采集已经过账,请先直接进行上架处理操作</string>
    <string name="detail_off_location">本次采集已经过账,请先直接进行下架处理操作</string>
    <string name="detail_transfer">本次采集已经过账,请先直接进行转储处理操作</string>
    <string name="line_num">行号</string>
    <string name="is_special_flag">是否下载特殊库存</string>
    <string name="device_location">设备位号</string>
    <string name="device_name">设备名称</string>
    <string name="basic_location">仓位主数据</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="basic_material">物料主数据</string>
    <string name="ip">设置服务器IP</string>
    <string-array name="special_inv_flags">
        <item> </item>
        <item>K</item>
    </string-array>
    <string-array name="package_conditions">
        <item>完好</item>
        <item>散箱</item>
        <item>包</item>
        <item>件</item>
        <item>无包装</item>
        <item>其他</item>
    </string-array>
    <string-array name="inspection_results">
        <item>合格</item>
        <item>不合格</item>
    </string-array>
    <string-array name="strategy_codes">
        <item>请选择</item>
        <item>1001_接收</item>
        <item>1004_拒收</item>
    </string-array>
    <string-array name="move_reasons">
        <item>请选择</item>
        <item>0001_质量低劣</item>
        <item>0002_未完成的</item>
        <item>0003_损坏的</item>
    </string-array>
    <string name="total_inspection_quantity">全检数量</string>
    <string name="inspection_condition">检验状况</string>
    <string name="inspection_method">检验方法</string>
    <string name="process_condition">处理情况</string>
</resources>