<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/root_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/parent_node_bg"
    android:orientation="horizontal">

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/rowNum"
        style="@style/TableHeaderStyle"
        android:layout_width="60dp"
        android:text="@string/row_num" />

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/refLineNum"
        style="@style/TableHeaderStyle"
        android:layout_width="80dp"
        android:text="@string/ref_line_num" />

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/specialInvFlag"
        style="@style/TableHeaderStyle"
        android:layout_width="80dp"
        android:text="@string/special_inv_flag" />

    <View style="@style/ItemSeperatorLayout"/>



    <TextView
        android:id="@+id/materialNum"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/material_num" />

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/materialDesc"
        style="@style/TableHeaderStyle"
        android:layout_width="240dp"
        android:text="@string/material_desc" />

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/materialGroup"
        style="@style/TableHeaderStyle"
        android:layout_width="240dp"
        android:text="@string/material_group" />

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/materialUnit"
        style="@style/TableHeaderStyle"
        android:layout_width="240dp"
        android:text="@string/material_unit" />

    <View style="@style/ItemSeperatorLayout"/>

    //应收数量
    <TextView
        android:id="@+id/actQuantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/act_quantity" />

    <View style="@style/ItemSeperatorLayout"/>

    //实收数量
    <TextView
        android:id="@+id/quantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/quantity" />

    <View style="@style/ItemSeperatorLayout"/>

    //库存地点
    <TextView
        android:id="@+id/inv"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/inv" />

    <View style="@style/ItemSeperatorLayout"/>

    //制造商名称

    <TextView
        android:id="@+id/manufacturer"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/manufacture_name" />

    <View style="@style/ItemSeperatorLayout"/>

    //抽检数量
    <TextView
        android:id="@+id/randomQuantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/sample_quantity" />

    <View style="@style/ItemSeperatorLayout"/>
    //完好数
    <TextView
        android:id="@+id/qualifiedQuantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/perfect_quantity" />

    <View style="@style/ItemSeperatorLayout"/>
    //锈蚀
    <TextView
        android:id="@+id/rustQuantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/corrosion" />

    <View style="@style/ItemSeperatorLayout"/>
    //损坏
    <TextView
        android:id="@+id/damagedQuantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/damage" />

    <View style="@style/ItemSeperatorLayout"/>
    //变质
    <TextView
        android:id="@+id/badQuantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/bad" />

    <View style="@style/ItemSeperatorLayout"/>
    //其他质量问题
    <TextView
        android:id="@+id/otherQuantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/quality_problem" />

    <View style="@style/ItemSeperatorLayout"/>
    //包装情况
    <TextView
        android:id="@+id/zPackage"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/package_condition" />

    <View style="@style/ItemSeperatorLayout"/>
    //送检数
    <TextView
        android:id="@+id/inspectionQuantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/inspect_quantity" />

    <View style="@style/ItemSeperatorLayout"/>
    //质检单号
    <TextView
        android:id="@+id/qmNum"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/qm_num" />

    <View style="@style/ItemSeperatorLayout"/>
    //合格证
    <TextView
        android:id="@+id/certificate"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/certificate" />

    <View style="@style/ItemSeperatorLayout"/>
    //说明书
    <TextView
        android:id="@+id/manual"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/manual" />

    <View style="@style/ItemSeperatorLayout"/>
    //质证书
    <TextView
        android:id="@+id/qmCertificate"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/quality_certificate" />

    <View style="@style/ItemSeperatorLayout"/>
    //查询或索赔单号
    <TextView
        android:id="@+id/claimNum"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/query_claim_num" />

    <View style="@style/ItemSeperatorLayout"/>
    //验收结果
    <TextView
        android:id="@+id/inspectionResult"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/inspection_result" />

    <View style="@style/ItemSeperatorLayout"/>
</LinearLayout>