<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/root_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/parent_node_bg"
    android:orientation="horizontal">

    <View style="@style/ItemSeperatorLayout" />

    <TextView
        android:id="@+id/refLineNum"
        style="@style/TableHeaderStyle"
        android:layout_width="80dp"
        android:text="@string/ref_num" />

    <View style="@style/ItemSeperatorLayout" />


    <TextView
        android:id="@+id/materialNum"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/material_num" />

    <View style="@style/ItemSeperatorLayout" />

    <TextView
        android:id="@+id/materialDesc"
        style="@style/TableHeaderStyle"
        android:layout_width="240dp"
        android:text="@string/material_desc" />

    <View style="@style/ItemSeperatorLayout" />


    <TextView
        android:id="@+id/materialGroup"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/material_group" />

    <View style="@style/ItemSeperatorLayout" />


    <TextView
        android:id="@+id/specialInvFlag"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/special_inv_flag" />

    <View style="@style/ItemSeperatorLayout" />

    <TextView
        android:id="@+id/orderQuantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/order_quantity" />

    <View style="@style/ItemSeperatorLayout" />

    <TextView
        android:id="@+id/actQuantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/act_quantity" />

    <View style="@style/ItemSeperatorLayout" />


    <TextView
        android:id="@+id/totalQuantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/total_quantity" />

    <View style="@style/ItemSeperatorLayout" />

    <TextView
        android:id="@+id/totalInspectionQuantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/total_inspection_quantity" />

    <View style="@style/ItemSeperatorLayout" />


    <TextView
        android:id="@+id/sampleQuantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/sample_quantity" />

    <View style="@style/ItemSeperatorLayout" />

    <TextView
        android:id="@+id/inspectionMethod"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/inspection_method" />

    <View style="@style/ItemSeperatorLayout" />

    <TextView
        android:id="@+id/inspectionCondition"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/inspection_condition" />

    <View style="@style/ItemSeperatorLayout" />


    <TextView
        android:id="@+id/processCondition"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/process_condition" />

    <View style="@style/ItemSeperatorLayout" />


    <TextView
        android:id="@+id/work"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/work" />

    <View style="@style/ItemSeperatorLayout" />

    <TextView
        android:id="@+id/inv"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/inv" />

    <View style="@style/ItemSeperatorLayout" />


</LinearLayout>