<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/root_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/parent_node_bg"
    android:orientation="horizontal">

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/rowNum"
        style="@style/TableHeaderStyle"
        android:layout_width="60dp"
        android:text="@string/row_num" />

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/materialNum"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/material_num" />

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/materialDesc"
        style="@style/TableHeaderStyle"
        android:layout_width="240dp"
        android:text="@string/material_desc" />

    <View style="@style/ItemSeperatorLayout"/>


    <TextView
        android:id="@+id/materialGroup"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/material_group" />

    <View style="@style/ItemSeperatorLayout"/>


    <TextView
        android:id="@+id/sendInv"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/send_inv" />

    <View style="@style/ItemSeperatorLayout"/>


    <TextView
        android:id="@+id/sendLoc"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/send_loc" />

    <View style="@style/ItemSeperatorLayout"/>


    <TextView
        android:id="@+id/sendBatchFlag"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/send_batch_flag" />

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/quantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/move_quantity" />

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/recLoc"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/rec_loc" />

    <View style="@style/ItemSeperatorLayout"/>
    <TextView
        android:id="@+id/recBatchFlag"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/rec_batch_flag" />

    <View style="@style/ItemSeperatorLayout"/>

    <!--增加寄售转自有的功能-->
    <TextView
        android:id="@+id/specialInvFlag"
        style="@style/TableChildHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/special_inv_flag" />

    <View style="@style/ItemSeperatorLayout" />

    <TextView
        android:id="@+id/specialInvNum"
        style="@style/TableChildHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/special_inv_num" />

    <View style="@style/ItemSeperatorLayout" />

</LinearLayout>