<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/root_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/parent_node_bg"
    android:orientation="horizontal">

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/rowNum"
        style="@style/TableHeaderStyle"
        android:layout_width="60dp"
        android:text="@string/row_num" />

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/refLineNum"
        style="@style/TableHeaderStyle"
        android:layout_width="80dp"
        android:text="@string/ref_line_num" />

    <View style="@style/ItemSeperatorLayout"/>


    <TextView
        android:id="@+id/materialNum"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/material_num" />

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/materialDesc"
        style="@style/TableHeaderStyle"
        android:layout_width="240dp"
        android:text="@string/material_desc" />

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/orderQuantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/contractQuantity" />

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/actQuantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/act_quantity" />

    <View style="@style/ItemSeperatorLayout"/>


    <TextView
        android:id="@+id/quantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/arrival_quantity" />

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/balanceQuantity"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/balance_quantity" />

    <View style="@style/ItemSeperatorLayout"/>


    <TextView
        android:id="@+id/work"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/work" />

    <View style="@style/ItemSeperatorLayout"/>


    <TextView
        android:id="@+id/inv"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/inv" />

    <View style="@style/ItemSeperatorLayout"/>

    <TextView
        android:id="@+id/isInspected"
        style="@style/TableHeaderStyle"
        android:layout_width="120dp"
        android:text="@string/has_approval" />

    <View style="@style/ItemSeperatorLayout"/>

</LinearLayout>